Configure PostgreSQL Docker setup with pgAdmin
- Update PostgreSQL to version 16-alpine with custom port 15432
- Add health checks and restart policy for database container
- Add pgAdmin for database management UI on port 5050
- Update connection string to match new database configuration
- Use custom credentials (dev/dev123) and database name (localdb)
- Configure persistent volumes for both postgres and pgadmin data

--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=auctions;Username=postgres;Password=postgrespw"
+    "DefaultConnection": "Host=localhost;Port=15432;Database=localdb;Username=dev;Password=dev123;"
   }
 }
