--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,39 @@
+version: '3.8'
+
 services:
   postgres:
-    image: postgres:18
+    image: postgres:16-alpine
+    container_name: local_postgres
+    restart: unless-stopped
     environment:
-      - POSTGRES_PASSWORD=postgrespw
+      POSTGRES_USER: dev
+      POSTGRES_PASSWORD: dev123
+      POSTGRES_DB: localdb
     ports:
-      - 5432:5432
+      - '15432:5432'
     volumes:
-      - pgdata:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U dev -d localdb']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: local_pgadmin
+    restart: unless-stopped
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@local.dev
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 80
+    ports:
+      - '5050:80'
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
 
 volumes:
-  pgdata:
+  postgres_data:
+  pgadmin_data:
