Add MongoDB integration to SearchService with Item model

--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://dev:dev123@localhost:27018"
   }
 }
