--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://dev:dev123@localhost:27018"
-  }
+  },
+  "AuctionServiceUrl": "http://localhost:7001"
 }
