--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.1" />
     <PackageReference Include="MongoDB.Entities" Version="24.1.1" />
   </ItemGroup>
 
