--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Consumers\" />
     <Folder Include="Controllers\" />
     <Folder Include="RequestHelpers\" />
     <Folder Include="Services\" />
