Implement initial database migration for PostgreSQL and configure external authentication

--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -12,6 +12,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Host=localhost;Port=15432;Database=identity;Username=dev;Password=dev123;"
   }
 }
