Add JWT authentication and authorization to AuctionService
- Configure JWT Bearer authentication with IdentityService
- Add [Authorize] attribute to create, update, and delete endpoints
- Set seller from authenticated user's identity
- Add seller ownership checks for update and delete operations
- Update IdentityService to use HTTP for local development

--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=15432;Database=localdb;Username=dev;Password=dev123;"
-  }
+  },
+  "IdentityServiceUrl": "http://localhost:5001"
 }
