--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -2,7 +2,50 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
+    }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "auctions": {
+        "ClusterId": "auctions",
+        "Match": {
+          "Path": "/auctions/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/auctions/{**catch-all}"
+          }
+        ]
+      },
+      "search": {
+        "ClusterId": "search",
+        "Match": {
+          "Path": "/search/{**catch-all}",
+          "Methods": ["GET"]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/search/{**catch-all}"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "auctions": {
+        "Destinations": {
+          "auctionApi": {
+            "Address": "http://localhost:7006"
+          }
+        }
+      },
+      "search": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://localhost:7005"
+          }
+        }
+      }
     }
   }
 }
