--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=15432;Database=localdb;Username=dev;Password=dev123;"
   },
-  "IdentityServiceUrl": "http://localhost:5001"
+  "IdentityServiceUrl": "http://localhost:5001",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "dev",
+    "Password": "dev123"
+  }
 }
