--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "MongoDbConnection": "mongodb://dev:dev123@localhost:27018"
   },
-  "AuctionServiceUrl": "http://localhost:7001"
+  "AuctionServiceUrl": "http://localhost:7001",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "dev",
+    "Password": "dev123"
+  }
 }
