--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -5,20 +5,20 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "IdentityServiceUrl": "http://localhost:5001",
+  "IdentityServiceUrl": "http://identity-service",
   "ReverseProxy": {
     "Clusters": {
       "auctions": {
         "Destinations": {
           "auctionApi": {
-            "Address": "http://localhost:7006"
+            "Address": "http://auction-service"
           }
         }
       },
       "search": {
         "Destinations": {
           "searchApi": {
-            "Address": "http://localhost:7005"
+            "Address": "http://search-service"
           }
         }
       }
